@@ -5,22 +5,14 @@
 
 <h2>Pizzeria is a JavaFX application😎</h2>
 
-To be used by customers in pizza places for building any kind of pizza they prefer to!
-
-
-<h2>Why Pizzeria could be useful? 🤷‍♂️ </h2>
-
-- Less code is needed compared to other **GUI** frameworks.
-    - Also that means **faster** speed !
-- Responsive application design with flexible layouts.
-- **JavaFX** provides a **rich** graphical user interface.
+This program asks the user to **sign in** to their account, and once they are in their account, they can **build** the pizza they prefer to. They'll also be able to view the **receipt** at the same time on the right side. If you would like to learn more about the **sign-in / sign-up program** and how it works, you can view its repository from [here](https://github.com/ashMohseni/sign-template). 
 
 
 <h2>How does Pizzeria look like at the moment?🧐</h2>
 So far the application looks like this👇<br><br>
 
 <p align="center">
-<img src="https://i.imgur.com/gfq1xUW.png" alt="Pizzeria app" width="90%" height="70%">
+<img src="https://github.com/ashMohseni/pizzeria/blob/master/src/resources/order-gif.gif?raw=true" alt="Pizzeria app" width="90%" height="70%">
 </p>
 
 Customers can **order** on the left side and **view** their reciept on the right side :)
@@ -28,6 +20,25 @@ Customers can **order** on the left side and **view** their reciept on the right
 
 <h2>So what is the goal?! 🌟</h2>
 <h4>The goal for this app is to have multiple scenes with a more realistic design !! 🖥 </h4><br>
+
+
+<h2> How to setup </h2>
+
+<p align="center">
+<img src="https://github.com/ashMohseni/Login/blob/master/src/resources/instruction%202.gif?raw=true" alt="instructions" width="90%" height="70%">
+</p>
+
+**Step1:** Download the JavaFx **SDK** from [here](https://gluonhq.com/products/javafx/)!
+
+**Step2:** Add the SDK to your **libraries** in your IDE
+
+**Step3:** From project propperties go to `Libraries/Compile` and add the JavaFx library to the **`Classpath`**
+
+**Step4:** From project propperties go to `Libraries/Run` and add the JavaFx library to the **`Modulepath`**
+
+**Step5:** Add the following to your **VM Options** : `--add-modules javafx.controls,javafx.fxml,javafx.graphics`
+
+**Step6:** Check off the `Compile on Save` option and **you're good to go**!!☺️
 
 
  
